--- a/README
+++ b/README
@@ -1,3 +1,3 @@
 MooWindow is simple .....
 
-![Screenshot](http://laryon.hu/moowindow/screen.jpg)
+![Screenshot](http://laryon.hu/moowindow/screenshot.jpg)
